--- a/src/css/MostrarDatos.css
+++ b/src/css/MostrarDatos.css
@@ -1,8 +1,7 @@
- body{
+body{
     margin: 0;
     padding: 0;
 }
-
 
 
 .containerInfo{
@@ -19,6 +18,8 @@
     justify-content: center;
     height: 400px;
     width: 300px;
+    gap: 1rem;
+    padding: 4px;
 }
 
 .containerImage img{
@@ -30,20 +31,24 @@
 }
 
 .containerDescription {
-
 text-align: center;
 }
 
 button{
-    margin-top: 15px;
+    color: white;
+    margin-top: 10px;
     margin-bottom: 10px;
-    border-radius: 20px;
+    padding: 5px;
+    border-radius: 8px;
+    border: none;
+    background-color: #4B48D6;
 }
 
 @media (max-width:768px){
 
 
-    .containerDescription{
-    color: aqua;
-    }
+    .containerInfo{
+        margin: 0 -1rem;}
 } 
+
+
