--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 *{
   margin: 0;
   padding: 0;
@@ -11,11 +10,65 @@ body{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover; 
+
 }
 
-.main
+.main{
+  display: flex;
+  flex-direction: column;
+}
 
-.pages{
+.father{
+  display: flex;
+}
+
+.rightContainer{
+ 
+  width: 100%;
+
+}
+
+
+img{
+  display: block;
+  width: 100%;
+}
+
+.listaProductos{
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  
+
+}
+
+.selector{
+ background-color: #4B48D6;
+ margin-left: 3rem;
+  width: 50%;
+
+}
+
+@media (max-width: 768px) {
+  .father{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .selector{
+   
+
+   
+    margin-left: 0;
+    width: 100%;
+  
+  }
+
+
+}
+/*.pages{
   position: relative;
   width: 300px;
 }
@@ -23,8 +76,9 @@ body{
 .containerFather{
   display: flex;
   flex-direction: column;    
-   ;
+  overflow: hidden;
   align-items: center;
+  ;
   width: 80%;
   margin: 0 auto;
   height: 100vh;
@@ -41,17 +95,7 @@ body{
 
 }
 
-img{
-  display: block;
-  width: 100%;
 
-}
-
-@media (min-width: 1245px) {
-  .containerFather{
-    flex-direction: ;
-  }
-}
 
 @media (max-width: 768px) {
   .main{
@@ -81,5 +125,4 @@ img{
     place-content: center;
   }
 }
-
-
+*/
