--- a/src/css/Aside.css
+++ b/src/css/Aside.css
@@ -4,12 +4,12 @@
   text-decoration: none;
   font-family: sans-serif;
   display: flex;
-  width: 100vw;
-  background-color: rebeccapurple;
+  width: 20rem;
+
 }
 
 .aside div {
-width: 80vw;
+width: 300px;
 }
 
 .logo{
@@ -98,11 +98,11 @@ background-color: #8280df;
   border-radius: 0 0px 16px 0px;
   box-shadow: 7px 4px 9px -6px rgba(0,0,0,0.75);
   column-gap: 4rem;
-  position: absolute;
+ 
   /* top: -100px; */
   left: 0;
   right: 0;
-  width: 15vw;
+  width: 20rem;
   gap: 2rem;
   background-color: #000;
 }
@@ -163,6 +163,10 @@ li > a{
       border-radius: 0;
       height: 100px;
       width: 100vw;
+  }
+
+  .aside{
+    width: 0px;
   }
 
   
