--- a/src/css/Proveedoras.css
+++ b/src/css/Proveedoras.css
@@ -4,8 +4,8 @@
     border-radius: 0px 15px 15px 0;
     height: 90px;
     margin-top: 2rem;
-    margin: 0 auto;
-    width: calc(80vw - 128px);
+
+    
 }
 
 .Select{
@@ -20,14 +20,9 @@ input{
     color: black;
 }
 
-@media (max-width: 768px ) {
+@media (max-width:768px ) {
     .Proveedoras-contenedor{
-        border-radius: 0 0 15px 15px;
-        width: (80vw - 128px);
-    }
-
-    .Select{
-    margin-top: 6rem;
-    height: 15vh;
+width: 100%;
+margin-top: 0;
     }
 }
