--- a/src/css/MostrarDatos.css
+++ b/src/css/MostrarDatos.css
@@ -6,7 +6,8 @@ body{
 
 .containerInfo{
     color: white;
-    background-color: #7B7B7B;
+    background: rgb(11,11,11);
+    background: linear-gradient(180deg, rgba(11,11,11,1) 0%, rgba(105,111,112,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,6 +30,7 @@ body{
     width: 200px;
     border-radius: 10px;
     border: none;
+    border: 5px solid #4B48D6;
 }
 
 .containerDescription {
