--- a/src/css/Pages.css
+++ b/src/css/Pages.css
@@ -8,7 +8,8 @@
     border: none;
     border-radius: 10px;
     color: white;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
+    margin-bottom: 1rem;
     overflow: hidden;
 }
 
