--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,5 +1,7 @@
 .footer{
-    background-color: #7B7B7B;
+    background: rgb(3,3,3);
+    background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(20,20,20,1) 100%);
+    color: white;
     
 }
 
