--- a/src/css/MostrarDatos.css
+++ b/src/css/MostrarDatos.css
@@ -6,8 +6,8 @@ body{
 
 .containerInfo{
     color: white;
-    background: rgb(11,11,11);
-    background: linear-gradient(180deg, rgba(11,11,11,1) 0%, rgba(105,111,112,1) 100%);
+    background: rgb(3,3,3);
+    background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(20,20,20,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +31,7 @@ body{
     width: 200px;
     border-radius: 10px;
     border: none;
-    border: 5px solid #4B48D6;
+    border: 3px solid #4B48D6;
 }
 
 .containerDescription {
@@ -46,6 +46,14 @@ button{
     border-radius: 8px;
     border: none;
     background-color: #4B48D6;
+}
+
+.containerInfo > button{
+    padding: 10px;
+}
+
+.containerInfo > button:hover{
+    transform: scale(1.1);
 }
 
 @media (max-width:768px){
