--- a/src/css/Contacto.css
+++ b/src/css/Contacto.css
@@ -6,19 +6,16 @@
 }
 
 body{
-    background-image: url(../../public/Banner.png);
+    /* background-image: url(../../public/Banner.png);
     background-repeat:no-repeat;
-    background-size: 100%;
+    background-size: 100%; */
 }
 .contacto{
     display: flex;
 }
 
-.aside{
-    background-color: black ;
-    width: 20rem;
-    height: 100vh;
-}
+
+
 
 .contact_container{
     gap: 10%;
@@ -73,7 +70,7 @@ input:focus{
 }
 
 
-button{
+.send_btn{
     width: 20%;
     height: 3rem;
     border: none;
@@ -85,7 +82,7 @@ button{
     cursor: pointer;
 }
 
-button:hover{
+.send_btn:hover{
     transform: scale(1.02);
     transition: .5s;
     box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.7);
