--- a/src/css/Ayuda.css
+++ b/src/css/Ayuda.css
@@ -27,7 +27,7 @@
 
 .cardopen {
     color: white;
-    height: 500px;
+    height: auto;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -54,4 +54,22 @@
 .text_bottom{
     width: 70%;
     margin: 0 auto;
+}
+
+article{
+    padding: 1.5rem;
+    background-color: rgb(0, 0, 0, 0.8);
+    border-radius: 15px;
+    color: white;
+    line-height: 1.6;
+}
+
+#icon{
+    text-align: center;
+    background-color: #4B48D6;
+    padding: 3%;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    cursor: auto;
 }
