--- a/src/css/Aside.css
+++ b/src/css/Aside.css
@@ -1,76 +1,3 @@
-.container-cart-products {
-	background-color: #fff;
-	width: 400px;
-	z-index: 1;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-	border-radius: 10px;
-}
-
-.hidden-cart {
-	display: none;
-}
-
-.cart-product {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 30px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.info-cart-product {
-	display: flex;
-	justify-content: space-between;
-	flex: 0.8;
-}
-
-.info-cart-product p{
-  color: black;
-}
-
-.info-cart-product span{
-  color: black;
-}
-
-.cantidad-producto-carrito {
-	font-weight: 400;
-	font-size: 20px;
-}
-.titulo-producto-carrito {
-	font-size: 10px;
-}
-.precio-producto-carrito {
-	font-weight: 700;
-	font-size: 10px;
-	margin-left: 10px;
-}
-
-.cart-empty {
-	padding: 20px;
-	text-align: center;
-  color: black;
-}
-
-.clear-btn{
-  cursor: pointer;
-  transition: all.3s ease ;
-}
-
-.clear-btn:hover{
-  transform: scale(1.1);
-  border-radius: none;
-}
-
-.cart-total h3{
-  color: black;
-
-}
-
-.total-pagar{
-  color: #0c0c0c;
-}
-
-
 .aside {
   text-decoration: none;
   font-family: sans-serif;
@@ -79,55 +6,51 @@
   min-height: 600px;
 }
 
-.aside div {
-width: 300px;
-}
-
-.logo{
-background-image: url(/images/logoblanco.svg) ;
+.logo {
+  background-image: url(/images/logoblanco.svg);
 
 }
 
-
-form{
-display: flex;
-justify-content: center;
+form {
+  display: flex;
+  justify-content: center;
 }
 
-.search{
-height: 2rem;
-width: 70%;
-border: none;
-border-radius: 5px 0 0 5px;
+.search {
+  height: 2rem;
+  width: 80%;
+  border: none;
+  border-radius: 5px 0 0 5px;
+
 }
 
-.btn{
-width: 3rem;
-border: none;
-border-radius: 0 5px 5px 0;
-background-color: #4B48D6 ;
-color: #ffff;
+.btn {
+  width: 3rem;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  background-color: #4B48D6;
+  color: #ffff;
 }
 
-.btn:hover{
-background-color: #8280df;
+.btn:hover {
+  background-color: #8280df;
 }
 
 
-.search_bar{
+.search_bar {
   padding: 1rem 2rem;
   width: 100% !important;
   align-items: baseline;
 }
 
-.search_bar > input{
+.search_bar>input {
   width: 70%;
   height: 2rem;
   border: none;
   border-radius: 5px 0px 0px 5px;
 }
 
-.search_bar > button{
+.search_bar>button {
   background-color: #4B48D6;
   height: 2rem;
   width: 4rem;
@@ -137,7 +60,7 @@ background-color: #8280df;
   font-family: Inter;
 }
 
-.search_bar > button:hover{
+.search_bar>button:hover {
   background-color: #8280df;
 }
 
@@ -148,7 +71,7 @@ background-color: #8280df;
   text-decoration: none;
 }
 
-.nav_link--inside{
+.nav_link--inside {
   border-radius: 6px;
   padding-left: 20px;
   text-align: left;
@@ -167,135 +90,155 @@ background-color: #8280df;
   justify-content: center;
   flex-direction: column;
   border-radius: 0 0px 16px 0px;
-  box-shadow: 7px 4px 9px -6px rgba(0,0,0,0.75);
+  box-shadow: 7px 4px 9px -6px rgba(0, 0, 0, 0.75);
   column-gap: 4rem;
- 
+
   /* top: -100px; */
   left: 0;
   right: 0;
   width: 20rem;
   gap: 2rem;
-  background: rgb(3,3,3);
-  background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(20,20,20,1) 100%);
+  background: rgb(3, 3, 3);
+  background: linear-gradient(180deg, rgba(3, 3, 3, 1) 0%, rgba(20, 20, 20, 1) 100%);
 }
 
 
-.aside_item:hover{
+.aside_item:hover {
   background-color: rgb(44, 44, 44);
 }
 
-.aside_title{
+.aside_title {
   display: flex;
   justify-content: space-between;
 }
 
-.aside_item  span  i{
+.aside_item span i {
   display: inline-block;
   width: 1.5em;
 }
 
-.aside_title .toggle_btn{
+.aside_title .toggle_btn {
   cursor: pointer;
   transition: transform .3s;
 }
 
-.aside_title .open .toggle_btn{
+.aside_title .open .toggle_btn {
   transform: rotate(180deg);
-  
+
 }
 
-.aside_content{
+.aside_content {
   font-size: .9rem;
   padding-top: .5rem;
   height: 0;
   overflow: hidden;
 }
 
-.open .aside_content{
+.open .aside_content {
   height: auto;
 }
 
-
-li > a{
+li>a {
   text-decoration: none;
   color: #ffff;
- padding: 1rem;
- font-size: 1.2rem;
+  padding: 1rem;
+  font-size: 1.2rem;
 }
 
-.dropdown{
+.dropdown {
   display: flex;
   flex-direction: column;
   text-align: center;
+  
 }
 
-.dropdown_content{  
-  overflow: hidden;
-  height: 0;
-}
-
-.dropdown_contentopen{
-  height: auto;
+.dropdown_content{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin-top:1rem;
-  color: white;
-  text-decoration: none;
+    padding: 1rem;
+    align-items: center;
+    gap: 1rem;
+}
+.dropdown_contentopen {
+ 
+  display: flex;
+  flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+    gap: 1rem;
+
 }
 
-i{
+i {
   cursor: pointer;
 }
 
-
-.dropdown_contentopen div:hover{
+.dropdown_contentopen div:hover {
   transform: scale(1.2);
   cursor: pointer;
 }
 
+.dropdown_title {
+  display: none;
+}
 
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
 
   .lista {
-    display: flex ;
+    display: flex;
+    justify-content: center;
     flex-direction: row;
-      justify-content: center;
-      flex-direction: column;
-      border-radius: 0;
-      height: 100px;
-      width: 100vw;
+    align-items: center;
+    border-radius: 0;
+    height: 100px;
+    width: 100vw;
+    position: relative;
+    column-gap: 0rem;
   }
 
-  .aside{
+  .aside {
     width: 0px;
     min-height: auto;
   }
 
-  
+  .search {
+    position: relative;
+  }
 
- li {
-      display: none;
- }
+  .dropdown_title {
+    display: block;
+    position: absolute;
+    width: fit-content;
+    bottom: 0.2rem;
+    right: -2rem;
 
- .dropdown{
-  display: none;
-} 
+  }
 
-.dropdown_content{
-display: none;
+  .dropdown {
+    position: absolute;
+    background-color: red;
+    top: 6.2rem;
+
+    width: 100%;
+    right: 0;
+    z-index: 10;
+  }
+
+  .dropdown_content {
+    display: none;
+  }
+
+  .dropdown_contentopen {
+    display: flex;
+    padding: 1rem;
+    align-items: start;
+    gap: 1rem;
+
+
+  }
+
 }
 
-.dropdown_contentopen{
-display: none;
-}
 
-  
-}
-
-
-@media (max-width: 375px){
-
-}
+@media (max-width: 375px) {}
