--- a/src/css/Ayuda.css
+++ b/src/css/Ayuda.css
@@ -9,6 +9,7 @@
 .card_container{
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 10%;
 }
 
@@ -48,7 +49,7 @@
 
 .card > p {
     height: 33%;
-    overflow: hidden;
+    display: none;
 }
 
 .text_bottom{
