--- a/src/css/Contacto.css
+++ b/src/css/Contacto.css
@@ -37,7 +37,7 @@
     font-size: 44px;
 }
 
-form{
+.contacto_form{
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -70,7 +70,7 @@ form{
     border-bottom: 0.5px solid white;
 }
 
-::placeholder{
+.input1::placeholder{
     color: white ;
     font-size: 1rem;
     font-family: Inter;
