--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,7 @@ left: 0;
 }
 
 
-
-@media (max-width: 768px) {
+@media (max-width: 998px) {
   .father{
     display: flex;
     flex-direction: column;
@@ -92,3 +91,26 @@ left: 0;
     top: 2.5rem;
   }
 }
+
+/*@media (max-width: 768px) {
+  .father{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .listaProductos{
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  .selector{
+    margin-left: 0;
+    width: 85%;
+  
+  }
+
+  .carro{
+    position: absolute;
+    right: 3%;
+    top: 2.5rem;
+  }
+}*/
