--- a/src/css/Ayuda.css
+++ b/src/css/Ayuda.css
@@ -1,21 +1,26 @@
 .ayuda_container{
-    height: 85vh;
+    height: 100%;
     display: flex;
+ 
     flex-direction: column;
     justify-content: center;
     gap: 15vh;
+    width: 100%;
 }
+
 
 .card_container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
     gap: 10%;
 }
 
 .card{
     color: white;
-    height: 350px;
+    height: 400px;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -23,12 +28,13 @@
     align-items: center;
     padding:0 1rem;
     border-radius: 20px;
+    margin-top: 3rem;
     background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(20,20,20,1) 100%);
 }
 
 .cardopen {
     color: white;
-    height: 500px;
+    height: 550px;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -36,6 +42,7 @@
     align-items: center;
     padding:0 1rem;
     border-radius: 20px;
+    margin-top: 3rem;
     background: linear-gradient(180deg, rgba(3,3,3,1) 0%, rgba(20,20,20,1) 100%);
 }
 
@@ -55,4 +62,12 @@
 .text_bottom{
     width: 70%;
     margin: 0 auto;
+}
+
+@media (max-width: 817px) {
+    .card_container{
+        display: flex;
+        flex-direction: column;
+    }
+
 }
