--- a/src/css/FormatoPagina.css
+++ b/src/css/FormatoPagina.css
@@ -63,8 +63,8 @@ img {
     width: 50%;
 
 }*/
-
-@media (max-width: 768px) {
+/*768*/
+@media (max-width: 998px) {
 
     .main{
         overflow: hidden;
